# ChangeLog for dev-lisp/sbcl
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.157 2009/04/27 21:55:59 hkbst Exp $

  27 Apr 2009; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.26-r10,
  sbcl-1.0.27-r10:
  temporarily restore timestamp hack

*sbcl-1.0.27-r10 (15 Apr 2009)

  15 Apr 2009; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.27-r10.ebuild:
  bump

  20 Mar 2009; Marijn Schouten <hkBst@gentoo.org> -sbcl-1.0.9.ebuild,
  -sbcl-1.0.10.ebuild, -sbcl-1.0.11-r1.ebuild, -sbcl-1.0.12.ebuild,
  -sbcl-1.0.13.ebuild, -sbcl-1.0.14.ebuild, -sbcl-1.0.15.ebuild,
  -sbcl-1.0.18.ebuild:
  clean up old cruft; fixes bug 227685 and bug 218144

  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> sbcl-1.0.19.ebuild:
  x86 stable wrt #261630

  14 Mar 2009; nixnut <nixnut@gentoo.org> sbcl-1.0.19.ebuild:
  ppc stable #261630

  11 Mar 2009; Ferris McCormick <fmccor@gentoo.org> sbcl-1.0.19.ebuild:
  Sparc stable, Bug #261630.

  11 Mar 2009; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.19.ebuild:
  mark amd64 stable on authority from Jeremy Olexa (darkside)

*sbcl-1.0.26-r10 (11 Mar 2009)

  11 Mar 2009; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.26-r10.ebuild:
  bump, get rid of timestamp hack, move to EAPI=2 for use dep

  16 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org> sbcl-1.0.9.ebuild,
  sbcl-1.0.10.ebuild, sbcl-1.0.11-r1.ebuild, sbcl-1.0.12.ebuild,
  sbcl-1.0.13.ebuild, sbcl-1.0.14.ebuild, sbcl-1.0.15.ebuild,
  sbcl-1.0.18.ebuild, sbcl-1.0.19.ebuild:
  Correct --as-needed filtering.

  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  sbcl-1.0.18.ebuild:
  forgot to update the 1.0.18 ebuild

  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  sbcl-1.0.19.ebuild:
  Disable QA execstack warnings as upstream will not fix them soon

*sbcl-1.0.19 (30 Jul 2008)

  30 Jul 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  +sbcl-1.0.19.ebuild:
  bump to version 1.0.19
