@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/sbcl
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.157 2009/04/27 21:55:59 hkbst Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.158 2009/05/04 18:11:08 hkbst Exp $
+
+*sbcl-1.0.28 (04 May 2009)
+
+  04 May 2009; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.28.ebuild:
+  bump
 
   27 Apr 2009; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.26-r10,
   sbcl-1.0.27-r10:
